# knowledge-graph-rag

./: .gitignore  README.md  main.py  pyproject.toml
src/: create_data.py
src/config/: logging.py  neo4j_config.py
src/data/: graph_prepration.py  mock_data.py
src/db/: neo4j_client.py
src/domain/: customer.py  ecl.py  loan.py
src/repos/: customer_repos.py  loan_repos.py  portfolio_repos.py
